--- a/frontend/Pages/Index.cshtml
+++ b/frontend/Pages/Index.cshtml
@@ -19,7 +19,7 @@ Weather Forecast:
          <th>Temp. (C)</th>
          <th>Temp. (F)</th>
          <th>Summary</th>   
-         <th>sum</th>   
+         <th>summ</th>   
       </tr>
    </thead>
    <tbody>
