--- a/frontend/Pages/Index.cshtml
+++ b/frontend/Pages/Index.cshtml
@@ -18,8 +18,8 @@ Weather Forecast:
          <th>Date</th>
          <th>Temp. (C)</th>
          <th>Temp. (F)</th>
-         <th>Summary</th>   
-         <th>sum</th>   
+         <th>Summary</th>    
+         <th> test2 </th> 
       </tr>
    </thead>
    <tbody>
