--- a/frontend/Pages/Index.cshtml
+++ b/frontend/Pages/Index.cshtml
@@ -5,7 +5,7 @@
 }
 
 <div class="text-center">
-   <h1 class="display-4">Welcome </h1>
+   <h1 class="display-4">Welcome</h1>
    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
 </div>
 
@@ -18,6 +18,7 @@ Weather Forecast:
          <th>Temp. (F)</th>
          <th>Summary</th>    
          <th> test2 </th> 
+         <th> sonata </th>
       </tr>
    </thead>
    <tbody>
