--- a/frontend/Pages/Privacy.cshtml
+++ b/frontend/Pages/Privacy.cshtml
@@ -1,7 +1,7 @@
 ﻿@page
 @model PrivacyModel
 @{
-    ViewData["Title"] = "Privacy Policy Test2";
+    ViewData["Title"] = "Privacy Policy Testing";
 }
 <h1>@ViewData["Title"]</h1>
 
