--- a/frontend/Pages/Index.cshtml
+++ b/frontend/Pages/Index.cshtml
@@ -13,7 +13,7 @@ Weather Forecast:
 <table class="table">
    <thead>
       <tr>
-         <th>Datee</th>
+         <th>Date</th>
          <th>Temp. (C)</th>
          <th>Temp. (F)</th>
          <th>Summary</th>    
