--- a/frontend/Pages/Index.cshtml
+++ b/frontend/Pages/Index.cshtml
@@ -5,7 +5,7 @@
 }
 
 <div class="text-center">
-   <h1 class="display-4">Welcome To Home Page</h1>
+   <h1 class="display-4">Welcome</h1>
    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
 </div>
 
@@ -16,8 +16,7 @@ Weather Forecast:
          <th>Date</th>
          <th>Temp. (C)</th>
          <th>Temp. (F)</th>
-         <th>Summary</th>    
-         <th>Test</th> 
+         <th>Summary</th>     
       </tr>
    </thead>
    <tbody>
