--- a/frontend/Pages/Index.cshtml
+++ b/frontend/Pages/Index.cshtml
@@ -5,7 +5,7 @@
 }
 
 <div class="text-center">
-   <h1 class="display-4">Welcome to Sonata</h1>
+   <h1 class="display-4">Welcome</h1>
    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
 </div>
 
@@ -13,7 +13,7 @@ Weather Forecast:
 <table class="table">
    <thead>
       <tr>
-         <th>Datee</th>
+         <th>Date</th>
          <th>Temp. (C)</th>
          <th>Temp. (F)</th>
          <th>Summary</th>   
