--- a/frontend/Pages/Privacy.cshtml
+++ b/frontend/Pages/Privacy.cshtml
@@ -5,4 +5,4 @@
 }
 <h1>@ViewData["Title"]</h1>
 
-<p>Use this page to detail your site's privacy policy of sonata</p>
+<p>Use this page to detail your site's privacy policy of sonata.</p>
