--- a/frontend/Pages/Index.cshtml
+++ b/frontend/Pages/Index.cshtml
@@ -16,7 +16,8 @@ Weather Forecast:
          <th>Datee</th>
          <th>Temp. (C)</th>
          <th>Temp. (F)</th>
-         <th>Summary</th>   
+         <th>Summary</th> 
+         <th>Test</th>  
       </tr>
    </thead>
    <tbody>
