--- a/frontend/Pages/Index.cshtml
+++ b/frontend/Pages/Index.cshtml
@@ -13,11 +13,10 @@ Weather Forecast:
 <table class="table">
    <thead>
       <tr>
-         <th>Date</th>
+         <th>Datee</th>
          <th>Temp. (C)</th>
          <th>Temp. (F)</th>
-         <th>Summary</th> 
-         <th>Test</th>
+         <th>Summary</th>
       </tr>
    </thead>
    <tbody>
