--- a/frontend/Pages/Index.cshtml
+++ b/frontend/Pages/Index.cshtml
@@ -17,7 +17,7 @@ Weather Forecast:
          <th>Temp. (C)</th>
          <th>Temp. (F)</th>
          <th>Summary</th>
-         <th>te</th>
+         <th>test</th>
       </tr>
    </thead>
    <tbody>
